Test Loading Speed 2 & Continue Mobile Test (Scroll Issues)

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                 position: absolute;">
                 <img src="./assets/refugee_camp_circle.svg" alt="" class="refugee-camp-circle">
             </div>
-            <div class="text-graphics flexible center-right z-top">
+            <div class="text-graphics flexible center z-top">
                 <p>
                     عند تقطيع فيديو الهجوم يمكن ملاحظة شكل القذيفة المستخدمة والتي تبدو مشابهة لقذائف <b>SPICE</b> الإسرائيلية (النسخة الإسرائيلية من مجموعة <b>JDAM</b>) 
                 </p>
