Desktop Version done

--- a/index.html
+++ b/index.html
@@ -208,7 +208,6 @@
                 background-repeat: no-repeat;
                 background-position: left;
                 position: absolute;">
-                <img src="./assets/refugee_camp_circle.svg" alt="" class="refugee-camp-circle">
             </div>
             <div class="text-graphics flexible center z-top">
                 <p>
@@ -243,19 +242,19 @@
             </div>
         </div>
 
-        <div id="fifteen" class="content-container top left">
-            <div class="content-child flexible fixed top-20 left">
+        <div id="fifteen" class="content-container top left single">
+            <div class="content-child flexible fixed top left">
                 <p>
                     عند اخذ صورة أوسع للمنطقة المتأثرة تظهر صور الأقمار الصناعية ضربتين إضافيتين على بعد 300 متر من الضربة التي تم توثيقها ونشرها على مواقع التواصل الإجتماعي.
                 </p>
             </div>
         </div>
 
-        <div id="seventeen" class="content-container top left">
+        <div id="seventeen" class="content-container top left single">
 
         </div>
 
-        <div id="eighteen" class="content-container top left">
+        <div id="eighteen" class="content-container top left single">
 
         </div>
 
@@ -297,7 +296,7 @@
                     We are talking about munition with 17 Kilos of explosive materiel <br>
                     <span class="source">Daniel Hagari</span>
                 </p>
-                <video width="320" height="240" class="center spice object-contain">
+                <video width="320" height="240" class="center-h spice object-contain">
                     <source src="./assets/videos/3.mp4" type="video/mp4">
                 </video>
             </div>
@@ -305,7 +304,7 @@
 
         <div id="twentytwo" class="content-container center graphics">
             <div class="content-child flexible">
-                <img src="./assets/SDB-GBU.png" alt="" class="center width-moderate">
+                <img src="./assets/SDB-GBU.png" alt="" class="center-h">
                 <div class="text-graphics flexible center-bottom-bottom z-top">
                     <p class="semi-bold font-s-24 margin-bottom-20">
                         بينما ظهرت بقايا القذيفة المستخدمة في الهجوم في فيديو نشره أحد المستخدمين على تليجرام، تعود إلى إحدى <span class="highlighted">القنابـل الأمريكيــة من نوع  SDB-GBU-39</span> ، كانت البقايا تعود لنظام تشغيل الذيل، الذي يتحكم في الزعانف التي توجه القنبلة إلى الهدف. استخدام <span class="highlighted">ذخيرتين تزن 17 كجم (37 باوند)</span> في هجومها <span class="highlighted">على المخيم في رفح</span>.
@@ -316,13 +315,11 @@
 
         <div id="twentythree" class="content-container center graphics">
             <div class="content-child flexible">
-                <div class="center width-moderate height-moderate" 
+                <div class="center-h-error width-moderate height-moderate" 
                     style="background-image: url(./assets/GBU-39.png);
                         background-size: contain;
                         background-repeat: no-repeat;
                         position: absolute;">
-                    <img src="./assets/refugee_camp_circle.svg" alt="" class="bomb-circle">
-                    <img src="./assets/rectangle_arrow.svg" alt="" class="bomb-circle-arrow">
                 </div>
                 <!-- <img src="" alt=""> -->
                 <div class="text-graphics flexible center-bottom-bottom z-top">
@@ -334,20 +331,19 @@
                     <p>
                         GBU-39 SDB
                     </p>
-                    <img src="./assets/icons/migration_arrow_4.svg" alt="" class="arrow-left-center">
+                    <img src="./assets/icons/arrow_long.svg" alt="" class="arrow-left-center">
                 </div>
             </div>
         </div>
 
         <div id="twentyfour" class="content-container center graphics">
             <div class="content-child flexible">
-                <div class="center width-moderate height-moderate" 
+                <div class="center-h-error width-moderate height-moderate" 
                 style="background-image: url(./assets/GBU-39_destroyed.png);
                     background-size: contain;
                     background-repeat: no-repeat;
                     position: absolute;">
-                    <img src="./assets/refugee_camp_circle.svg" alt="" class="bomb-destroyed-circle">
-                    <img src="./assets/rectangle_arrow.svg" alt="" class="bomb-destroyed-circle-arrow">
+                    
                 </div>
                 <div class="text-graphics flexible center-bottom-bottom z-top">
                     <p class="semi-bold font-s-24 margin-bottom-20">
@@ -377,7 +373,7 @@
                     <p>
                         81873
                     </p>
-                    <img src="./assets/icons/migration_arrow_4.svg" alt="" class="arrow-left-center" style="scale: 2; left: 100%">
+                    <img src="./assets/icons/arrow_long.svg" alt="" class="arrow-left-center" style="scale: 2; left: 100%">
                 </div>
                 <img src="./assets/table.svg" alt="" class="center-bottom-bottom" style="width: 90%; height: 25%">
             </div>
@@ -409,13 +405,13 @@
                         ظهر الضرر في مقاطع الفيديو المصورة بعد الحادثة، كانت بعض الخيام قد انهارت وبعضها الآخر مُلئ بالثقوب إثر تطاير شظايا المقذوف.​
                     </p>
                 </div>
-                <video width="320" height="240" class="center spice width-moderate object-contain" controls>
+                <video width="320" height="240" class="center spice width-moderate aljazera" controls>
                     <source src="./assets/videos/4.mp4" type="video/mp4">
                 </video>
             </div>
         </div>
 
-        <div id="twentyeight" class="content-container left">
+        <div id="twentyeight" class="content-container left single">
             <div class="content-child flexible top-20">
                 <p class="font-s-24 margin-bottom-20">
                     كان التأثير واضحًا في صور الأقمار الصناعية الحديثة بتـــاريخ <b>30  يونيو/حزيران 2024</b>، يمكــن ملاحــظة بقعة وانطمار بعض الخيام.​
@@ -423,7 +419,7 @@
             </div>
         </div>
 
-        <div id="twentynine" class="content-container top-20 left">
+        <div id="twentynine" class="content-container top-20 left single">
             <div class="content-child flexible">
                 <p class="font-s-24 margin-bottom-20">
                     بالنظر الى صور الأقمار الصناعية بتاريخ <b>26  يونيو/حزيران 2024 </b>قبيل يومين فقط من الهجوم، يظهر الموقع مزدحمًا بالخيام والنازحين. حيث كانت المنطقة ملجأً للعديد بعد إعلان الاجتياح لرفــــح وإطلاق المنشورات التحذيرية للجوء نحو المنطقة.​
@@ -431,7 +427,7 @@
             </div>
         </div>
 
-        <div id="thirty" class="content-container top-20 left">
+        <div id="thirty" class="content-container top-20 left single">
             <div class="content-child flexible">
                 <p class="font-s-24 margin-bottom-20">
                     ولكن يمكن ملاحظة اختفاء العديد من تلك الخيام بعد الهجوم، الصورة أُخذت في <b>6 يونيو/حزيران 2024 .​</b>
