Desktop Version Preview

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
         </div>
 
         <div id="twelve" class="content-container center graphics">
-            <div class="center-left-image width-moderate height-moderate" 
+            <div class="center width-moderate height-moderate" 
             style="background-image: url(./assets/israel_bomb.png);
                 background-size: contain;
                 background-repeat: no-repeat;
@@ -211,7 +211,7 @@
                 position: absolute;
                 background-position: center;">
             </div>
-            <div class="text-graphics flexible center z-top">
+            <div class="text-graphics flexible center-right z-top">
                 <p>
                     عند تقطيع فيديو الهجوم يمكن ملاحظة شكل القذيفة المستخدمة والتي تبدو مشابهة لقذائف <b>SPICE</b> الإسرائيلية (النسخة الإسرائيلية من مجموعة <b>JDAM</b>) 
                 </p>
@@ -245,7 +245,7 @@
                 </p>
             </video> -->
 
-                <video preload="auto" width="320" height="240" class="center spice animated-video" controls>
+                <video preload="auto" width="320" height="240" class="center spice animated-video" >
                     <source src="./assets/videos/1.mp4" type="video/mp4">
                 </video>
             </div>
@@ -288,7 +288,7 @@
 
         <div id="nineteen" class="content-container center graphics">
             <div class="content-child flexible">
-                <video preload="auto" width="320" height="240" class="center spice animated-image-three" controls>
+                <video preload="auto" width="320" height="240" class="center spice animated-image-three" >
                     <source src="./assets/videos/2.mp4" type="video/mp4">
                 </video>
             </div>
@@ -412,7 +412,7 @@
                         مقابلة مع إحدى الناجيات من قصف خيام المواصي، تتحدث عن تتابع دورات النزوح والتي لم تحميهم من الموت أيضًا.
                     </p>
                 </div>
-                <video preload="auto" width="320" height="240" class="center spice object-contain" controls>
+                <video preload="auto" width="320" height="240" class="center spice object-contain" >
                     <source src="./assets/Audio/1.mp4" type="video/mp4">
                 </video>
             </div>
@@ -421,12 +421,12 @@
         <div id="twentyseven" class="content-container center graphics">
             <div class="content-child flexible">
                 <img src="./assets/Gaza_map_on_video.svg" alt="" class="gaza-map-on-video z-top">
-                <div class="text-graphics flexible top-moderate-center z-top">
+                <div class="text-graphics flexible top-center z-top">
                     <p class="semi-bold font-s-24 margin-bottom-20">
                         ظهر الضرر في مقاطع الفيديو المصورة بعد الحادثة، كانت بعض الخيام قد انهارت وبعضها الآخر مُلئ بالثقوب إثر تطاير شظايا المقذوف.​
                     </p>
                 </div>
-                <video preload="auto" width="320" height="240" class="center spice width-moderate aljazera" controls>
+                <video preload="auto" width="320" height="240" class="center spice width-moderate aljazera" >
                     <source src="./assets/videos/4.mp4" type="video/mp4">
                 </video>
             </div>
