--- a/index.html
+++ b/index.html
@@ -64,12 +64,6 @@
             </p>
         </div>
 
-        <div id="two-three" class="content-container left top graphics">
-            <p class="content-child top-left flexible w-30">
-                مع استمرار إلقاء مناشير الإخلاء للشمال وانتقال المدنيين للجنوب
-            </p>
-        </div>
-
         <div id="two-four" class="content-container left top graphics">
             <p class="content-child top-left flexible w-30">
                 نُشرت <a href="https://www.facebook.com/IDFarabicAvichayAdraee/posts/pfbid02SkbnHP3qN1huBUBWoFp3XQ2nzGM8AQqsv4fChSuo4HZGRbQqUAsi9Yq5H7jgYT5sl">أوامر جديدة</a> في ١٣ ديسمبر/كانون الأول ٢٠٢٣ تطلب من سكان منطقة خان يونس بالنزوح الى مناطق تل السلطان والزهور والشابورة، ومن ثم <a href="https://www.facebook.com/IDFarabicAvichayAdraee/posts/pfbid02SkbnHP3qN1huBUBWoFp3XQ2nzGM8AQqsv4fChSuo4HZGRbQqUAsi9Yq5H7jgYT5sl" target="_blank">إخلاء</a> بعض مناطق جنوب وادي غزة نحو المآوي في دير البلح.
@@ -401,7 +395,7 @@
                         عاودت القوات الإسرائيلية قصف خيام المواصي غربي رفح في 28 مايو/أيار 2024، سقط على إثر الهجوم عشرات القتلى والجرحى من النازحين.
                     </p>
                 </div>
-                <div class="text-graphics flexible center-bottom">
+                <div class="text-graphics flexible center-bottom-bottom">
                     <p class="highlighted">
                         مقابلة مع إحدى الناجيات من قصف خيام المواصي، تتحدث عن تتابع دورات النزوح والتي لم تحميهم من الموت أيضًا.
                     </p>
