--- a/index.html
+++ b/index.html
@@ -233,6 +233,7 @@
                     </p>
                     <img class="arrow-bottom-left" src="./assets/icons/migration_arrow_4.svg" alt="">
                 </div>
+                <div id="loading-icon" class="z-top"></div>
                 <video preload="auto" width="320" height="240" class="center spice animated-video" controls>
                     <source src="./assets/videos/1.mp4" type="video/mp4">
                 </video>
@@ -276,6 +277,7 @@
 
         <div id="nineteen" class="content-container center graphics">
             <div class="content-child flexible">
+                <div id="loading-icon" class="z-top"></div>
                 <video preload="auto" width="320" height="240" class="center spice animated-image-three" controls>
                     <source src="./assets/videos/2.mp4" type="video/mp4">
                 </video>
@@ -304,6 +306,7 @@
                     We are talking about munition with 17 Kilos of explosive materiel <br>
                     <span class="source">Daniel Hagari</span>
                 </p>
+                <div id="loading-icon" class="z-top"></div>
                 <video preload="auto" width="320" height="240" class="center-h spice daniel-video" poster="/assets/videos/3_poster.png">
                     <source src="./assets/videos/3.mp4" type="video/mp4">
                 </video>
@@ -400,7 +403,8 @@
                         مقابلة مع إحدى الناجيات من قصف خيام المواصي، تتحدث عن تتابع دورات النزوح والتي لم تحميهم من الموت أيضًا.
                     </p>
                 </div>
-                <video preload="auto" width="320" height="240" class="center spice object-contain" controls>
+                <div id="loading-icon" class="z-top"></div>
+                <video preload="auto" width="320" height="240" class="center spice object-contain audio" controls>
                     <source src="./assets/Audio/1.mp4" type="video/mp4">
                 </video>
             </div>
@@ -414,6 +418,7 @@
                         ظهر الضرر في مقاطع الفيديو المصورة بعد الحادثة، كانت بعض الخيام قد انهارت وبعضها الآخر مُلئ بالثقوب إثر تطاير شظايا المقذوف.​
                     </p>
                 </div>
+                <div id="loading-icon" class="z-top"></div>
                 <video preload="auto" width="320" height="240" class="center spice width-moderate aljazera" controls>
                     <source src="./assets/videos/4.mp4" type="video/mp4">
                 </video>
